@@ -17,7 +17,7 @@ test_weof_LDADD = ../libevent_core.la
 test_time_SOURCES = test-time.c
 test_time_LDADD = ../libevent_core.la
 regress_SOURCES = regress.c regress.h regress_http.c regress_dns.c \
-	regress_rpc.c regress.gen.c regress.gen.h
+	regress_rpc.c regress.gen.c regress.gen.h regress_et.c
 if PTHREAD_REGRESS
 regress_SOURCES += regress_pthread.c
 endif
